fix a bug where on mobile there is weird horizontal spacing

--- a/styles/header.css
+++ b/styles/header.css
@@ -131,6 +131,12 @@
     visibility: hidden;
 }
 
+@media only screen and (max-width: 65rem) {
+    .popover {
+        display: none;
+    }
+}
+
 .popover[open] {
     top: var(--header-height);
     visibility: unset;
